<resources>
    <string name="app_name">Truck It ZayLabs</string>

    <!-- Login-->
    <string name="Sign_In_btn">Sign In</string>
    <string name="btnSignInDesc">Sign In</string>
    <string name="Email">Enter Email</string>
    <string name="Email_Desc">Enter Valid Email</string>
    <string name="Hint_Email">Enter registered email</string>
    <string name="Password">Enter Password</string>
    <string name="Password_Desc">Password</string>
    <string name="Hint_Password">Enter Password</string>
    <string name="Register_login">Register</string>
    <string name="Forget_Password">Forget Password ?</string>
    <string name="Home">Home</string>
    <string name="take_photo_prompt">Upload Picture</string>
    <string name="camera_button_text">Upload</string>
    <string name="imagelink">ImageLink</string>
    <string name="chooseimage">Choose Image:</string>
    <string name="payment">Payment</string>
    <!--Registration-->
    <string name="Register_btn">Register</string>
    <string name="Email_Register">Email</string>
    <string name="Email_R_Hint">Ente email to register</string>
    <string name="Password_Register">Password</string>
    <string name="Password_R_Hint">Password Min Characters 6</string>
    <string name="Phone_Number">Enter Phone Number</string>
    <string name="Hint_Phone">+92 123 4567890</string>
    <string name="Company_Name">Company Name</string>
    <string name="NotRegistered">Not Registered ?</string>
    <!--Forget Password-->
    <string name="Forget_Email">Email Address</string>

    <!--User Profile-->
    <string name="btnUpdate">Save</string>
    <string name="Image_View">Image</string>
    <string name="Phone_Number1">Default Phone</string>
    <string name="Alt_Number">Alternate Number</string>


    <!--Cargo Details-->
    <string name="CargoDetail">Item Description</string>
    <string name="GatePassImage">Gate Pass Image</string>
    <string name="Weight">Approx Weight</string>
    <string name="Units">Approx Units</string>

    <!--Vehicle Type-->
    <string name="VehicleType1">Suzuki Open</string>
    <string name="VehicleType2">Suzuki Closed</string>
    <string name="VehicleType3">Riksha</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="vehicle_name">"Vehicle Type       "</string>

    <!--Navigation-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="cargo_calculator">Cargo Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="get_help">Get Help</string>
    <string name="log_out">Logout</string>
    <string name="title_activity_maps">Map</string>
    <string name="profile">Profile</string>

    <string name="CNIC">CNIC</string>
    <string name="UploadLicense">Upload License</string>
    <string name="VehicleRegistrationNumber">Vehicle Reg:Number</string>
    <string name="CarType1">Suzuki</string>
    <string name="CarTYpe2">Riksha</string>
    <string name="AcceptTerms">Accept Terms</string>
    <string name="ProfilePicture">Set Profile Piture</string>


    <string name="back">Return to Login</string>
    <string name="wallet">Wallet</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Profile-->
    <string name="backto">Home</string>
    <string name="customer_name">Name</string>
    <string name="customer_number">Phone</string>
    <string name="btn_confirm">Confirm</string>

    <!--    Permissions    -->
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <!--Location -->
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>

    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>

    <!--Location-->

    <string name="drop_up_location">Drop up location</string>
    <string name="pick_up_location">Pick up location</string>
    <string name="direction_request">Direction Requesting........</string>
    <string name="request_ride">Request Ride</string>
    <string name="couldnt_get_location">couldn\'t get your location</string>
    <string name="invalid_location">invalid location</string>
    <string name="invalid_distance">invalid distance</string>
    <string name="invalid_pickupaddress">invalid pickup address</string>
    <string name="invalid_dropaddress">invalid drop address</string>
    <string name="invalid_pickuplocation">invalid pickup location</string>
    <string name="invalid_droplocation">invalid drop location</string>
    <string name="ride_has_been_requested">Ride has been requested</string>
    <string name="cancel">CANCEL</string>
    <string name="confirm">CONFIRM</string>
    <string name="FROM">FROM</string>
    <string name="TIME">TIME</string>
    <string name="DRIVERNAME">DRIVER NAME</string>
    <string name="TO">TO</string>
    <string name="basefare">"Base Fare       "</string>
    <string name="pickup_location">"Pickup Location       "</string>
    <string name="drop_location">"Drop Location       "</string>
    <string name="namee">"Name       "</string>
    <string name="drivername">"Driver Number       "</string>
    <string name="payment_status">"Payment Status       "</string>
    <string name="mobile_numberr">"Mobile Number       "</string>
    <string name="CUSTOMERNAME">CUSTOMER NAME</string>
    <string name="nodata_found">No Data Found</string>
    <string name="vehicle_info">VEHICLE INFO</string>
    <string name="ratekm">RATE / KM</string>
    <string name="REQUEST_RIDE">REQUEST RIDE</string>
    <string name="INVALID_DISTANCE">INVALID DISTANCE</string>
    <string name="fare">"Fare       "</string>
    <string name="ride_request">Ride Request</string>
    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
        Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->

    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Get place</string>
    <string name="pick_place">Choose a place</string>
    <string name="title_activity_fare_estimate">FareEstimate</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="get_fare_estimate">Get Fare Estimate</string>
</resources>

