<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zaylabs.truckitzaylabsv1.fragment.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:layout_width="100sp"
            android:layout_height="100sp"
            android:id="@+id/profileImage"
            android:src="@drawable/ic_account_circle_black_24dp"
            android:layout_marginBottom="20sp"
            android:contentDescription="@string/Image_View"
            android:layout_gravity="center"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/customer_name"
            android:layout_marginBottom="20sp"/>
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/customer_number"
            android:layout_marginBottom="20sp"
            android:inputType="number"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/confirm"
            android:text="@string/btn_confirm"
        />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/back"
            android:text="@string/backto"/>

    </LinearLayout>

</FrameLayout>
