<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zaylabs.truckitzaylabsv1.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <EditText
            android:id="@+id/etSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/Email"
            tools:ignore="LabelFor"
            android:gravity="center"
            android:layout_marginTop="40sp"

            />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Hint_Password"
            android:inputType="textPassword"
            android:layout_marginBottom="40sp"
            android:gravity="center"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40sp"
            android:background="@null"
            android:gravity="center"
            android:hint="@string/customer_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/customer_number"
            android:layout_marginBottom="40sp"
            android:inputType="phone"
            android:gravity="center"
            />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Register_btn"
            android:gravity="center"
            android:background="@color/primaryColor"
            android:textColor="@color/primaryTextColor"
            />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>


