<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zaylabs.truckitzaylabsv1.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <EditText
            android:id="@+id/etForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Email_Desc"
            android:inputType="textEmailAddress"
            android:text="@string/Email"
            android:layout_marginBottom="40sp"
            android:layout_marginTop="40sp"
            android:layout_gravity="center"
            tools:ignore="LabelFor" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnForgetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/Forget_Password"
            android:text="@string/Forget_Password"
            android:gravity="center"
            android:background="@color/primaryColor"
            android:layout_marginBottom="40sp"
            />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/back"
            android:text="@string/back"
            android:gravity="center"
            android:background="@color/primaryColor"
            />


    </LinearLayout>
</android.support.constraint.ConstraintLayout>
