<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.zaylabs.truckitzaylabsv1.MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_main" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_dialog_email" />



            <Button
                android:id="@+id/start_updates_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/start_updates"
                android:visibility="gone"
                />

            <Button
                android:id="@+id/stop_updates_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/small_margin"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_weight="1"
                android:enabled="false"
                android:gravity="center"
                android:text="@string/stop_updates"
                android:visibility="gone"
                />


        <TextView
            android:id="@+id/latitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:textSize="@dimen/default_text_size"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/longitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:textSize="@dimen/default_text_size"
            android:visibility="invisible"
            />

        <TextView
            android:id="@+id/last_update_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:textSize="@dimen/default_text_size"
            android:visibility="visible"
            />

        <TextView
            android:id="@+id/location_inadequate_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_settings_inadequate_warning"
            android:visibility="gone" />


<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/headerframe"
    android:visibility="gone"
    >
    <include
        layout="@layout/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        />


</FrameLayout>


</android.support.design.widget.CoordinatorLayout>
