<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <TextView android:visibility="gone"
        android:id="@+id/txt_calfare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/swipe_refresh"
        android:layout_marginStart="5dp"
        android:background="#2a2a2a"
        android:padding="3dp"
        android:text="Calculating Fare.........."
        android:textColor="@color/white" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/staticmapview"
        android:layout_width="match_parent"
        android:layout_height="140dp">

    </com.google.android.gms.maps.MapView>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/staticmapview"
        android:layout_marginTop="10dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:scrollbarThumbVertical="@android:color/transparent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:padding="10dp"
                    android:text="Request Vahicle"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <View
                    android:id="@+id/liner"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/title"
                    android:background="@color/liner" />

                <LinearLayout
                    android:id="@+id/linear_child1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/liner"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <TableLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView9"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Total Distance in KM"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <TextView
                                android:id="@+id/distance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:contentDescription=""
                                android:maxLines="2"

                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:visibility="visible"
                                tools:ignore="ContentDescription,RtlHardcoded" />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Number of Boxes"
                                android:textAppearance="?android:attr/textAppearanceSmall" />


                            <EditText
                                android:id="@+id/number_Boxes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="2"
                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:inputType="number"
                                />

                        </TableRow>
                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView6"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/Weight"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <EditText
                                android:id="@+id/Weight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="2"
                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:inputType="number"
                                />

                        </TableRow>
                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView3"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Goods Description"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <EditText
                                android:id="@+id/txt_Desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="2"
                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:inputType="textMultiLine"
                                />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView11"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Driver Loading"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <CheckBox
                                android:id="@+id/dirver_loading"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="2"
                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:checked="false"

                                />

                        </TableRow>

                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/vehicle_name"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <RadioGroup
                                android:id="@+id/radiogroup_VType"
                                android:layout_width="171dp"
                                android:layout_height="20dp"
                                android:orientation="horizontal">

                                <RadioButton
                                    android:id="@+id/radio_CarType1"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:checked="true"
                                    android:text="@string/CarType1" />

                                <RadioButton
                                    android:id="@+id/radio_CarType2"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/CarTYpe2" />

                            </RadioGroup>

                        </TableRow>





                        <TableRow
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="0dp"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/textView5"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Fare Estimate"
                                android:textAppearance="?android:attr/textAppearanceSmall" />

                            <TextView
                                android:id="@+id/txt_fare"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:text=""
                                android:textAppearance="?android:attr/textAppearanceSmall"
                                android:inputType="number"
                                />

                        </TableRow>

                    </TableLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_below="@+id/title"
                        android:background="@color/liner" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_child1"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_cancel"
                        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"

                        android:layout_weight="1"
                        android:background="@drawable/ripple_effect"
                        android:text="@string/cancel" />


                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/btn_confirm"
                        style="@style/Base.TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/ripple_effect"
                        android:text="@string/confirm" />
                </LinearLayout>

            </RelativeLayout>
        </ScrollView>
    </android.support.v4.widget.SwipeRefreshLayout>



</RelativeLayout>